# SmplVM

./: Cargo.toml
examples/: basic.sasm  basic.toml  display.sasm  display.toml
src/: cmd.rs  debugger.rs  decompile.rs  display.rs  lib.rs  main.rs  utils.rs  vm.rs
src/debugger/: cmd.rs  debugger.rs  mod.rs
src/utils/: args.rs  cfg.rs  error.rs  mod.rs
