[package]
name = "smpl_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smpl_core_common = { git = "https://github.com/SmplWorks/SmplCore-common.git", branch = "main" }
smpl_parser = { git = "https://github.com/SmplWorks/SmplParser.git", branch = "main" }
sasm = { git = "https://github.com/SmplWorks/sasm", branch = "main" }
thiserror = "1.0.56"
clap = { version = "4.4.18", features = ["derive"] }
winit = "0.29.10"
softbuffer = "0.4.1"
rusttype = "0.9.3"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"
inquire = "0.6.2"
